--- a/createAccount.html
+++ b/createAccount.html
@@ -227,11 +227,11 @@ button{
 
     })
 
-    console.log("Create an object")
-    const createUserIdentification = {
-        id : '',
-        getUserName : ''
-    }
+    // console.log("Create an object")
+    // const createUserIdentification = {
+    //     id : '',
+    //     getUserName : ''
+    // }
    
 </script>
     <!-- <script>
