--- a/createAccount.html
+++ b/createAccount.html
@@ -18,10 +18,6 @@
 body{
     background-color: #afa9e0;
 }
-#firstPage{
-margin-left: 860px;
-  z-index: 1;
-}
 
 .background{
     width: 480px;
@@ -173,7 +169,7 @@ button{
         <!-- <button style="margin-top: -44px;" id="login">Log In</button> -->
         <div class="social">
           <!-- <button class="go"></i>Sign in</button> -->
-          <button class="fb" type="submit" id="firstPage">Create Account</button>
+          <button class="fb" type="submit"  style="margin-left:500px, z-index:1;" id="firstPage">Create Account</button>
         </div>
     </form>
     <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
