--- a/createAccount.html
+++ b/createAccount.html
@@ -136,6 +136,12 @@ button{
 /* .social i{
   margin-right: 4px;
 } */
+      @media screen and (min-width: 480px){
+    .firstPage {
+        margin-left: 400px;
+        margin-top: 1200px;
+    }
+}
 
     </style>
 </head>
