--- a/createAccount.html
+++ b/createAccount.html
@@ -136,7 +136,13 @@ button{
 /* .social i{
   margin-right: 4px;
 } */
-      @media screen and (min-width: 480px){
+  @media screen and (min-width: 480px){
+    .firstPage {
+        margin-left: 400px;
+        margin-top: 1200px;
+    }
+} 
+@media only screen and (min-width: 600px)  {
     .firstPage {
         margin-left: 400px;
         margin-top: 1200px;
